navbar, form_errors 생성, 패스워드 일치 확인 controller 로직 추가, 회원가입 기능 구현

--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -19,15 +19,15 @@
         </div>
         <div class="mb-3">
             <label class="form-label">닉네임</label>
-            <input type="text" th:field="*{username}" class="form-control">
+            <input type="text" th:field="*{nickname}" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">비밀번호</label>
-            <input type="password" th:field="*{password1}" class="form-control">
+            <input type="password" th:field="*{password}" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">비밀번호 확인</label>
-            <input type="password" th:field="*{password2}" class="form-control">
+            <input type="password" th:field="*{password_check}" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">이메일</label>
