--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -1,28 +1,30 @@
-<!--로그인 페이지-->
-<!-- login_form.html-->
-<!DOCTYPE html>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-<div class="container">
-    <h1>로그인</h1>
-    <form th:action="@{/login_proc}" method="post">
-        <div class="form-group">
-            <label th:for="username">아이디</label>
-            <input type="text" name="username" class="form-control" placeholder="아이디 입력해주세요">
+<html
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        xmlns:th="http://thymeleaf.org"
+        layout:decorate="~{layout}">
+
+<div layout:fragment="content" class="container my-3">
+    <form th:action="@{/user/login}" method="post">
+
+        <div th:if="${param.error}">
+            <div class="alert alert-danger">
+                사용자ID 또는 비밀번호를 확인해 주세요.
+            </div>
         </div>
-        <div class="form-group">
-            <label th:for="password">비밀번호</label>
-            <input type="password" class="form-control" name="password" placeholder="비밀번호 입력해주세요">
+
+        <div class="mb-3">
+            <label class="form-label">사용자ID</label>
+            <input type="text" name="username" class="form-control">
         </div>
+
+        <div class="mb-3">
+            <label class="form-label">비밀번호</label>
+            <input type="password" name="password" class="form-control">
+        </div>
+
         <button type="submit" class="btn btn-primary">로그인</button>
         <button type="button" class="btn btn-primary" onClick="location.href='signUp'">회원 가입</button>
     </form>
-    <br/>
 </div>
-</body>
 </html>
+
