--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -23,7 +23,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">로그인</button>
-        <button type="button" class="btn btn-primary" onClick="location.href='signUp'">회원 가입</button>
+        <button type="button" class="btn btn-primary" th:onclick="|location.href='@{/user/signup}'|">회원가입하기</button>
     </form>
 </div>
 </html>
