--- a/src/main/resources/templates/my_page_form.html
+++ b/src/main/resources/templates/my_page_form.html
@@ -10,6 +10,23 @@
         </div>
     </div>
     <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post">
+
+        <div class="mb-3">
+            <label class="form-label">닉네임</label>
+            <input type="text" th:field="*{nickname}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">비밀번호</label>
+            <input type="password" th:field="*{password}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">비밀번호 확인</label>
+            <input type="password" th:field="*{password_check}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">이메일</label>
+            <input type="email" th:field="*{email}" class="form-control">
+        </div>
         <button type="submit" class="btn btn-primary">정보 수정</button>
     </form>
 </div>
