--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -1,5 +1,5 @@
 <html layout:decorate="~{layout/layout}">
-<div layout:fragment="content" class="container my-3">
+<div layout:fragment="content">
     <div class="main-content-container container-fluid px-4">
         <!-- Page Header -->
         <div class="page-header row no-gutters py-4">
@@ -11,35 +11,22 @@
         <!-- End Page Header -->
         <!-- Default Light Table -->
         <div class="row">
-            <div class="col-lg-4">
-                <div class="card card-small mb-4 pt-3">
-                    <div class="card-header border-bottom text-center">
-                        <div class="card-post__image" th:style="'background-image: url(/images/람쥐썬더.jpg);'"></div>
-                        <h4 class="mb-0">Sierra Brooks</h4>
-                        <span class="text-muted d-block mb-2">Project Manager</span>
-                        <button type="button" class="mb-2 btn btn-sm btn-pill btn-outline-primary mr-2">
-                            <i class="material-icons mr-1">person_add</i>Follow</button>
-                    </div>
+            <div class="col-lg-6">
+                <div class="card card-small mb-4" style="height: 600px;">
+                    <div class="card-post__image" style="background-image: url(https://picsum.photos/200); height: 400px;"></div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item px-4">
-                            <div class="progress-wrapper">
-                                <strong class="text-muted d-block mb-2">Workload</strong>
-                                <div class="progress progress-sm">
-                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100" style="width: 74%;">
-                                        <span class="progress-value">74%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item p-4">
+                        <li class="list-group-item p-4 text-center">
                             <strong class="text-muted d-block mb-2">Description</strong>
                             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eaque, quidem, commodi soluta qui quae minima obcaecati quod dolorum sint alias, possimus illum assumenda eligendi cumque?</span>
+                            <br/>
+                            <button type="button" class="mt-2 mb-2 btn btn-sm btn-pill btn-outline-primary mx-auto" style="width: 70px;">
+                                <i class="material-icons mr-1">person_add</i>담기</button>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-8">
-                <div class="card card-small mb-4">
+            <div class="col-lg-6">
+                <div class="card card-small mb-4" style="height: 600px;">
                     <div class="card-header border-bottom">
                         <h6 class="m-0">Account Details</h6>
                     </div>
