--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -9,10 +9,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
         <script src="https://unpkg.com/shards-ui@latest/dist/js/shards.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
-        <script src="scripts/extras.1.1.0.min.js"></script>
-        <script src="scripts/shards-dashboards.1.1.0.min.js"></script>
-        <script src="scripts/app/app-blog-overview.1.1.0.js"></script>
+        <script type="text/javascript" th:src="@{/scripts/extras.1.1.0.min.js}"></script>
+        <script type="text/javascript" th:src="@{/scripts/shards-dashboards.1.1.0.min.js}"></script>
+        <script type="text/javascript" th:src="@{/scripts/app/app-blog-overview.1.1.0.js}"></script>
         <!--<script th:src="@{/bootstrap.min.js}"></script>-->
+        <script type="text/javascript" th:src="@{/scripts/image-slide-show.js}"></script>
 
     </th:block>
 </html>
