회원가입 기능 구현

--- a/src/main/resources/templates/user_access.html
+++ b/src/main/resources/templates/user_access.html
@@ -16,7 +16,7 @@
         <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
     </li>
     <li sec:authorize="isAuthenticated()">
-        <a class="nav-link" th:href="@{/user/mypage}">마이페이지</a>
+        <a class="nav-link" th:href="@{/user/my_page}">마이페이지</a>
     </li>
     <br/>
 </div>
