마이페이지 오류 메시지 출력 추가

--- a/src/main/resources/templates/my_page_form.html
+++ b/src/main/resources/templates/my_page_form.html
@@ -11,6 +11,8 @@
     </div>
     <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post">
 
+        <div th:replace="form_errors :: formErrorsFragment"></div>
+
         <div class="mb-3">
             <label class="form-label">닉네임</label>
             <input type="text" th:field="*{nickname}" class="form-control">
