--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,7 +19,8 @@
                     <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user/signup}">회원가입</a>
+                    <!-- sec:authorize="isAuthenticated()" : 로그인 상태일 때 만 렌더링 -->
+                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/my_page}">마이페이지</a>
                 </li>
             </ul>
         </div>
