--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -1,7 +1,6 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
-    <link th:href="@{/styles/image-slide-show.css}" rel="stylesheet" />
-    <div class="main-content-container container-fluid px-4">
+    <div class="main-content-container container-fluid px-4" id="spotDetail">
         <!-- Page Header -->
         <div class="page-header row no-gutters py-4">
             <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
@@ -9,27 +8,34 @@
             </div>
         </div>
         <!-- End Page Header -->
-        <div id="slideShow">
-            <ul class="slides">
-                <li><img th:src="@{/images/avatars/0.jpg}" alt=""></li>
-                <li><img th:src="@{/images/avatars/1.jpg}" alt=""></li>
-                <li><img th:src="@{/images/avatars/2.jpg}" alt=""></li>
-                <li><img th:src="@{/images/avatars/3.jpg}" alt=""></li>
-            </ul>
-            <p class="controller">
-                <!-- &lang: 왼쪽 방향 화살표
-                &rang: 오른쪽 방향 화살표 -->
-                <span class="prev">&lang;</span>
-                <span class="next">&rang;</span>
-            </p>
-        </div>
         <!-- Default Light Table -->
         <div class="row">
             <div class="col-lg-8">
-                <div class="card card-small mb-4" style="height: 600px;">
-                    <div th:each="image : ${spotDto.spotImageList}">
-                        <div class="card-post__image" th:style="'background-image: url('+@{${image.URL}}+'); height: 400px;'"></div>
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <!-- <img th:src="${spotDto.spotImageList[0].URL}" class="d-block w-400"> -->
+                            <img th:src="@{/images/content-management/1.jpeg}" class="d-block w-400">
+                        </div>
+                        <!--<div class="carousel-item" th:each="image, index : ${spotDto.spotImageList}">
+                            <img th:if="${index.index} > 0" th:src="${image.URL}" class="d-block w-400">
+                        </div>-->
+                        <div class="carousel-item">
+                            <img th:src="@{/images/content-management/2.jpeg}" class="d-block w-400">
+                        </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card card-small mb-4" style="height: 200px;">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item p-4 text-center">
                             <strong class="text-muted d-block mb-2">Description</strong>
@@ -39,13 +45,11 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card card-small blog-comments" style="height: 600px;">
+                <div class="card card-small blog-comments" style="height: 400px;">
                     <div class="card-header border-bottom">
                         <h6 class="m-0">Spot Review</h6>
                     </div>
-                    <div class="card-body p-0" style="overflow:scroll; width:400px;">
+                    <div class="card-body p-0" style="overflow:scroll;">
                         <div th:each="review : ${spotDto.reviewList}" class="blog-comments__item d-flex p-3">
                             <div class="blog-comments__content">
                                 <div class="blog-comments__meta text-muted">
