--- a/src/main/resources/templates/review_form.html
+++ b/src/main/resources/templates/review_form.html
@@ -6,7 +6,7 @@
 <div layout:fragment="content" class="container">
     <h5 class="my-3 border-bottom pb-2">리뷰등록</h5>
 
-    <form th:action="@{/question/create}" method="POST">
+    <form th:action="@{/review/create}" method="POST">
         <div class="mb-3">
             <label class="form-label">제목</label>
             <input type="text" name="subject" class="form-control" placeholder="제목을 입력해주세요.">
