메인 컨텐츠 부분의 상하 마진 삭제(불필요한 스크롤 삭제)

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -11,7 +11,7 @@
                 <th:block th:replace="/layout/fragments/sidebar :: sidebarFragment"></th:block>
 
                 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
-                <div class="main-content-container container-fluid px-4 my-3">
+                <div class="main-content-container container-fluid px-4">
                     <th:block layout:fragment="content"></th:block>
                 </div>
                 <!-- 기본 템플릿 안에 삽입될 내용 End -->
