--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -11,27 +11,31 @@
         <!-- Default Light Table -->
         <div class="row">
             <div class="col-lg-8">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <th:block th:each="image, index : ${spotDto.spotImageList}">
+                            <li th:if="${index.index} > 0" data-target="#carouselExampleIndicators" th:data-slide-to="${index.index}"></li>
+                        </th:block>
+                    </ol>
+                    <div class="carousel-inner" style="height: 600px;">
                         <div class="carousel-item active">
-                            <!-- <img th:src="${spotDto.spotImageList[0].URL}" class="d-block w-400"> -->
-                            <img th:src="@{/images/content-management/1.jpeg}" class="d-block w-400">
+                            <img class="d-block w-100" th:src="${spotDto.spotImageList[0].URL}" alt="First slide">
                         </div>
-                        <!--<div class="carousel-item" th:each="image, index : ${spotDto.spotImageList}">
-                            <img th:if="${index.index} > 0" th:src="${image.URL}" class="d-block w-400">
-                        </div>-->
-                        <div class="carousel-item">
-                            <img th:src="@{/images/content-management/2.jpeg}" class="d-block w-400">
-                        </div>
+                        <th:block th:each="image, index : ${spotDto.spotImageList}">
+                            <div class="carousel-item">
+                                <img class="d-block w-100" th:src="${image.URL}">
+                            </div>
+                        </th:block>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-4">
