--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -22,8 +22,8 @@
             <input type="password" name="password" class="form-control">
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="formCheckDefault">
-            <label class="form-check-label" for="formCheckDefault" name="remember-me">자동 로그인</label>
+            <input type="checkbox" class="form-check-input" id="remember-me" name="remember-me" checked>
+            <label class="form-check-label" for="remember-me" aria-describedby="rememberMeHelp">로그인 유지</label>
         </div>
         <button type="submit" class="btn btn-primary">로그인</button>
         <button type="button" class="btn btn-primary" th:onclick="|location.href='@{/user/signup}'|">회원가입</button>
