채팅 기능 구현 완료 - 여행 설계 페이지와 합쳐서 UI 수정만 하면 완료

--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -71,9 +71,9 @@
                 }
             },
             enterRoom: function(roomId) {
-                var sender = prompt('대화명을 입력해 주세요.');
-                if(sender !== "") {
-                    localStorage.setItem('wschat.sender',sender);
+                var user = prompt('대화명을 입력해 주세요.');
+                if(user !== "") {
+                    localStorage.setItem('wschat.user',user);
                     localStorage.setItem('wschat.roomId',roomId);
                     location.href="/chat/room/enter/"+roomId;
                 }
