--- a/src/main/resources/templates/spot/spotList.html
+++ b/src/main/resources/templates/spot/spotList.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
-    <form method="get" action="/spot/show">
+    <form method="get" action="/spot/show" class="py-3">
         <div class="form-row mb-1">
             <div class="col">
                 <input class="w-50 float-right" name="searchWord" type="text" placeholder="검색어 입력">
