--- a/src/main/resources/templates/design/map/new_plan.html
+++ b/src/main/resources/templates/design/map/new_plan.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
   <div class="justify-content-center container w-25">
-    <form th:action="@{/search/design/new}" method="post">
+    <form th:action="@{/travel/design/new}" method="post">
       <div class="card card my-2">
         <span class="text-center">여행이름</span>
         <input type="text" name="title" id="title" style="border-radius: 5px;">
