--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -26,7 +26,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">
+                        <a class="nav-link " th:href="@{/travel/design/list}">
                             <i class="material-icons">edit</i>
                             <span>여행 계획 세우기</span>
                         </a>
