--- a/src/main/resources/templates/design/map/new_plan.html
+++ b/src/main/resources/templates/design/map/new_plan.html
@@ -1,16 +1,22 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
   <div class="justify-content-center container w-25">
-    <form th:action="@{/travel/design/new}" method="post">
-      <div class="card card my-2">
-        <span class="text-center">여행이름</span>
+    <form th:action="@{/travel/design/new}" method="post" class="card card mt-2">
+      <div class="m-4">
+        <span class="text-center mb-2">여행이름</span>
+        <br>
         <input type="text" name="title" id="title" style="border-radius: 5px;">
       </div>
-      <div class="card card mb-2" >
-        <span class="text-center">여행일수</span>
+      <div class="m-4" >
+        <span class="text-center mb-2">여행일수</span>
+        <br>
         <input style="border-radius: 5px;" type="text" name="size" id="size">
       </div>
-      <button type="submit" class="btn btn-primary mb-2">저장</button>
+      <div class="m-4">
+        <span class="text-center mb-2">Memo</span>
+      <textarea name="memo" id="memo" cols="25" rows="10"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary mb-2 mx-2">저장</button>
     </form>
   </div>
 </div>
