수정 로직 변경

--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -17,7 +17,7 @@
 <!--                        <span th:text="5일 동안" class="text-danger small ms-2"></span> &lt;!&ndash; 여행일수 &ndash;&gt;-->
                         <div class="d-flex justify-content-around">
                             <a class="btn btn-outline-secondary p-2 px-4 mx-1"
-                                    th:href="@{|/travel/design/modification/${plan.id}?order=1|}">수정</a>
+                                    th:href="@{|/travel/design/modification/basic/${plan.id}|}">수정</a>
                             <a class="btn btn-outline-secondary p-2 px-4 mx-1"
                                     th:href="@{|/travel/design/detail/${plan.id}?order=1|}">상세</a>
                             <a class="btn btn-outline-secondary p-2 px-4 mx-1"
