--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -3,7 +3,7 @@
     <!-- start -->
     <div class="main-content-container container-fluid px-4">
         <div class="row">
-            <div th:each="plan : ${planList}" class="col-lg-3 col-md-6 col-sm-12 mb-4">
+            <div th:each="plan : ${paging}" class="col-lg-3 col-md-6 col-sm-12 mb-4">
                 <div class="card card-small card-post h-100 mt-3">
                     <div class="card-post__image" th:style="'background-image: url(https://picsum.photos/800);'"></div>
                     <div class="card-footer text-muted border-top py-3">
